<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/history"/>
    <item
        android:id="@+id/help"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_help_24"
        android:title="@string/help"/>
    <item
        android:id="@+id/about"
        android:enabled="true"
        android:icon="@drawable/ic_info"
        android:title="@string/about"/>
</menu>