<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/iv_app_logo"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:src="@drawable/logo_5_v2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"
                />
            <TextView
                android:id="@+id/tv_app_ver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textAlignment="center"
                android:textColor="#009444"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_app_logo"
                app:layout_constraintVertical_bias="0.0"
                />

            <TextView
                android:id="@+id/tv_app_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_desc"
                android:textAlignment="center"
                android:textColor="#009444"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_app_ver"
                app:layout_constraintVertical_bias="0.05"
                />


            <TextView
                android:id="@+id/dev_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/devs"
                android:textColor="#009444"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_app_desc"
                app:layout_constraintVertical_bias="0.2"
                />

            <TextView
                android:id="@+id/dev_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:padding="5sp"
                android:text="@string/devs_member"
                android:textColor="#009444"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dev_title"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/umc_logo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/umc_logo"
                app:layout_constraintBottom_toBottomOf="@id/dev_members"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.986"
                app:layout_constraintStart_toStartOf="@id/dev_members" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>


</ScrollView>